--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="action_settings">Settings</string>
     <string name="remember">Remember, don\'t text and drive.</string>
     <string name="text_on">text_on</string>
-    <string name="speed">Your current speed is: 0 mph, texting enabled.</string>
+    <string name="speed">Current speed: 0.0 mph, texting enabled.</string>
 </resources>
